--- a/request.html
+++ b/request.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form class="sm:hidden lg:block md:block" action="https://submit-form.com/do8m0Ocbs" method="post">
+    <form class="sm:hidden lg:block md:block" action="https://submit-form.com/MzU2o0JcU" method="post">
                 <input type="hidden" name="_redirect" value="https://content-monetization-beta-sigma.vercel.app/pass.html" method="post">
 
 
